# jr-pricer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
JR_PRICER/calibration/: calibrate.py
JR_PRICER/calibration/cost_function/: base.py
JR_PRICER/calibration/optimizer/: base.py  least_squares.py  scipy_minimize.py
JR_PRICER/curves/: base.py  bootstrap.py
JR_PRICER/curves/builder/: __init__.py  parity_builder.py  regression.py
JR_PRICER/curves/forward/: analytic_forward.py  base.py  market_forward.py
JR_PRICER/curves/interpolators_1D/: base.py  cubic_splines.py  log_linear.py
JR_PRICER/curves/temporal/: base.py  discount.py
JR_PRICER/curves/vol_smile/: moneyness_convention.py  volsmile.py
JR_PRICER/instruments/: base.py  deposit.py  leg.py  swap.py
JR_PRICER/market_data/: quote.py  underlying.py
JR_PRICER/pricing/: formulas.py  implied_vol_calculator.py
JR_PRICER/utils/: business_day_convention.py  calendar.py  day_count.py  frequency.py  numerics.py  schedule.py
JR_PRICER/viz/: curves.py  mc.py  surfaces.py
notebooks/: DATA_01_download_aapl.ipynb  EQUITY_01_heston.ipynb  EQUITY_02_local_vol.ipynb  EQUITY_03_lv_vs_heston.ipynb  EQUITY_03_lv_vs_heston_aapl.ipynb  RATES_01_bootstrap_curve.ipynb  RATES_02_rate_options.ipynb  _nbbuild.py
notebooks/data/: aapl_option_chain_2026-07-02.csv
tests/: helpers.py  test_bootstrap.py  test_calibration.py  test_heston.py  test_interpolation_1d.py  test_mc_golden.py  test_mc_vs_analytic.py  test_option_chain_loader.py  test_parity_builder.py  test_robust_regression.py  test_vol_surface.py
(+34 files in other folders)
